--- a/css/style-home.css
+++ b/css/style-home.css
@@ -65,14 +65,43 @@ body{
 .abc{
     width: 100%;
 }
-.add-btn-container{
-    width: 100%;
+
+#articles-container{
+    
+}
+
+.toolbar{
+    width: 64%;
+    top: 0px;
+    max-height: 100px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    max-height: 100px;
-    margin: 20px;
+    /* margin: 20px; */
+    background-color: #fff;
+    border-radius: 7px;
+    box-shadow: 0 5px 10px -5px#d00070;
+    position: fixed;
+    z-index: 10;
+    padding: 10px;
 }
+
+#articles-container{
+    padding-top: 80px;
+}
+
+
+#articles-container {
+    max-height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+#articles-container::-webkit-scrollbar {
+    width: 0px;
+    /* Set the width of the scrollbar */
+}
+
+
 
 #article-form-container {
     position: absolute;
