--- a/css/style-home.css
+++ b/css/style-home.css
@@ -106,7 +106,7 @@ body{
 #article-form-container {
     position: absolute;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     background-color: rgba(255, 255, 255, 0.5);
     display: none;
     /* Start with display: none; */
@@ -118,13 +118,14 @@ body{
     justify-content: center;
     align-items: center;
     height: 100%;
-    /* Ensure the content takes the full height of the container */
+    margin: 40px;
 }
 
 #article-form-container div{
     /* display: block; */
     /* max-height: 300px; */
 }
+
 #article-form{
     width: 100%;
     display: flex;
@@ -132,17 +133,10 @@ body{
     justify-content: center;
     align-items: center;
     width: 100%;
-    /* max-height: 300px; */
-    /* background-color: #d00070; */
     padding: 0 0 0 0;
     margin: 0 0 0 0;
 }
 
-
-.triangle {
-    clip-path: polygon(50% 0%, 0% 25%, 100% 25%);
-    background-color: #d00070;
-}
 .no-pad{
     padding: 0 0 0 0 !important;
     height: 100vh;
