--- a/css/custom-elements.css
+++ b/css/custom-elements.css
@@ -129,3 +129,98 @@
     justify-content: center;
     padding: 10px 0 10px 0;
 }
+
+.input-container {
+    display: flex;
+    justify-content: space-around;
+    margin: 0px 20px 50px 20px;
+    color: #c7c7c7;
+}
+
+.text-area-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    /* background-color: #d00070; */
+}
+
+.text-area-container textarea{
+    width: 100%;
+    height: 500px;
+    border: none;
+    background-color: rgba(255, 255, 255, 0);
+    text-align: left;
+    resize:vertical;
+    outline: none;
+    padding: 10px 0 10px 0;
+    /* box-shadow: #d00070 0px 0px 10px 0px inset; */
+}
+
+input {
+    border: none;
+    background-color: rgba(255, 255, 255, 0);
+    border-bottom: 1px solid #c7c7c7;
+    text-align: center;
+    width: 96%;
+}
+
+input:-webkit-autofill {
+    background-color: white !important;
+}
+
+input:focus {
+    outline: none;
+    border-bottom: 1px solid #d00070;
+}
+
+.focused {
+    color: #d00070;
+    border-bottom: #d00070;
+}
+
+
+
+i[class*="custom-input-i"][class*="custom"] {
+    color: #c7c7c7;
+    font-size: 1.8em;
+    margin: 0 -10px -10px -10px;
+}
+
+
+button {
+    border: none;
+    max-height: 35px;
+    background-color: #d00070;
+    color: #fff;
+    padding: 0 20px 0 20px;
+    border-radius: 5px;
+    font-size: 1.2em;
+    font-family: 'Jost', sans-serif;
+    outline: none;
+    transition: all 0.2s ease-in-out;
+}
+
+
+button:hover {
+    background-color: #000;
+}
+
+i[class*="focus-custom-input"][class*="custom"] {
+    color: #d00070;
+    font-size: 1.8em;
+    margin: 0 -10px -10px -10px;
+}
+
+.angles-container{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 15px 0 15px 0;
+}
+
+.angles-container > .custom-input-i{
+    transform: rotate(45deg);
+}
